--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 </head>
 <body>
   <div class="section">
+    <div class="container" id="search-container">
+      <div class="row" id="modal">
+        <div id="w-modal" class="w-box w-modal text-center">
+          <button id="close" class="shadow-inset-center">x</button>
+          <div id="modal-content" class="modal-content">
+            <div class="modal-header">
+              <h5>Choose Location</h5>
+            </div>
+            <div id="alert" class="text-left"></div>
+            <div class="modal-body">
+              <form id="w-form">
+                <div class="form-group">
+                    <label for="city">City</label>
+                    <input type="text" id="city" placeholder="City" required>
+                </div>
+              </form>
+            </div>
+            <button id="w-change-btn" type="button" class="btn shadow-inset-center">Check Weather</button>
+          </div>
+        </div>
+      </div> 
+    </div>
     <div id="video-container">
       <video autoplay loop muted id="Snow" class="video">
         <source src="video/snow.mp4">
@@ -24,9 +46,10 @@
         <source src="video/cloudy.mp4">
       </video>
     </div>
-    <div class="container">
-      <div class="row" id="row-weather">
-          <div class="w-box weather">
+
+    <div class="container" id="weather-container">
+      <div class="row" id="row-weather ">
+          <div class="w-box weather text-center">
               <h1 id="w-location"></h1>
               <h2 class="capitalize" id="w-desc"></h2>
               <h3 id="w-string"></h3>
@@ -36,48 +59,18 @@
                   <li id="w-humidity"></li>
                   <li id="w-wind"></li>
               </ul>
-              <button type="button" id="loc-modal" class="btn shadow-inset-center" data-bs-toggle="modal" data-bs-target="#locModal">
+              <button type="button" id="loc-modal" class="btn shadow-inset-center">
                   Change Location
-                </button>
+              </button>
           </div>
-        </div>
-        <div class="row" id="modal">
-          <div class="w-box w-modal">
-            <div class="modal-fade" id="locModal" tabindex="-1" role="dialog" aria-labelledby="locModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="locModalLabel">Choose Location</h5>
-                    <button id="x" type="button" class="close shadow-inset-center" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    <form id="w-form">
-                      <div class="form-group">
-                          <label for="city">City</label>
-                          <input type="text" id="city" class="form-control" placeholder="city" required>
-                      </div>
-                      <div class="form-group">
-                          <label for="country">Country</label>
-                          <input type="text" id="country" class="form-control" placeholder="country" >
-                      </div>
-                    </form>
-                  </div>
-                    <button id="w-change-btn" type="button" class="btn shadow-inset-center">Check Weather</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
+  <footer class="footer text-center">Lula Vinas &copy 2021</footer>
 
-    <script src="storage.js"></script>
     <script src="weather.js"></script>
     <script src="ui.js"></script>
     <script src="app.js"></script>
-    
+  
 </body>
 </html>
